--- a/uacme.1
+++ b/uacme.1
@@ -1,13 +1,13 @@
 '\" t
 .\"     Title: uacme
 .\"    Author: [see the "AUTHOR" section]
-.\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 09/30/2019
+.\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
+.\"      Date: 04/25/2020
 .\"    Manual: User Commands
-.\"    Source: uacme 1.0.19
+.\"    Source: uacme 1.2.4
 .\"  Language: English
 .\"
-.TH "UACME" "1" "09/30/2019" "uacme 1\&.0\&.19" "User Commands"
+.TH "UACME" "1" "04/25/2020" "uacme 1\&.2\&.4" "User Commands"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -31,7 +31,7 @@
 uacme \- ACMEv2 client written in plain C code with minimal dependencies
 .SH "SYNOPSIS"
 .sp
-\fBuacme\fR [\fB\-a\fR|\fB\-\-acme\-url\fR \fIURL\fR] [\fB\-b\fR|\fB\-\-bits\fR \fIBITS\fR] [\fB\-c\fR|\fB\-\-confdir\fR \fIDIR\fR] [\fB\-d\fR|\fB\-\-days\fR \fIDAYS\fR] [\fB\-f\fR|\fB\-\-force\fR] [\fB\-h\fR|\fB\-\-hook\fR \fIPROGRAM\fR] [\fB\-m\fR|\fB\-\-must\-staple\fR] [\fB\-n\fR|\fB\-\-never\fR] [\fB\-s\fR|\fB\-\-staging\fR] [\fB\-t\fR|\fB\-\-type\fR \fBRSA\fR|\fBEC\fR] [\fB\-v\fR|\fB\-\-verbose\fR \&...] [\fB\-V\fR|\fB\-\-version\fR] [\fB\-y\fR|\fB\-\-yes\fR] [\fB\-?\fR|\fB\-\-help\fR] \fBnew\fR [\fIEMAIL\fR] | \fBupdate\fR [\fIEMAIL\fR] | \fBdeactivate\fR | \fBnewkey\fR | \fBissue\fR \fIDOMAIN\fR [\fIALTNAME\fR \&...]] | \fBrevoke\fR \fICERTFILE\fR
+\fBuacme\fR [\fB\-a\fR|\fB\-\-acme\-url\fR \fIURL\fR] [\fB\-b\fR|\fB\-\-bits\fR \fIBITS\fR] [\fB\-c\fR|\fB\-\-confdir\fR \fIDIR\fR] [\fB\-d\fR|\fB\-\-days\fR \fIDAYS\fR] [\fB\-f\fR|\fB\-\-force\fR] [\fB\-h\fR|\fB\-\-hook\fR \fIPROGRAM\fR] [\fB\-m\fR|\fB\-\-must\-staple\fR] [\fB\-n\fR|\fB\-\-never\-create\fR] [\fB\-o\fR|\fB\-\-no\-ocsp\fR] [\fB\-s\fR|\fB\-\-staging\fR] [\fB\-t\fR|\fB\-\-type\fR \fBRSA\fR|\fBEC\fR] [\fB\-v\fR|\fB\-\-verbose\fR \&...] [\fB\-V\fR|\fB\-\-version\fR] [\fB\-y\fR|\fB\-\-yes\fR] [\fB\-?\fR|\fB\-\-help\fR] \fBnew\fR [\fIEMAIL\fR] | \fBupdate\fR [\fIEMAIL\fR] | \fBdeactivate\fR | \fBnewkey\fR | \fBissue\fR \fIIDENTIFIER\fR [\fIALTNAME\fR \&...]] | \fBrevoke\fR \fICERTFILE\fR
 .SH "DESCRIPTION"
 .sp
 \fBuacme\fR is a client for the ACMEv2 protocol described in RFC8555, written in plain C code with minimal dependencies (libcurl and one of GnuTLS, OpenSSL or mbedTLS)\&. The ACMEv2 protocol allows a Certificate Authority (https://letsencrypt\&.org is a popular one) and an applicant to automate the process of verification and certificate issuance\&. The protocol also provides facilities for other certificate management functions, such as certificate revocation\&. For more information see https://tools\&.ietf\&.org/html/rfc8555
@@ -70,7 +70,7 @@ Use configuration directory
 \fICONFDIR\fR
 (default
 \fI/etc/ssl/uacme\fR)\&. The structure is as follows (multiple
-\fIDOMAINs\fR
+\fIIDENTIFIERs\fR
 allowed)
 .PP
 \fICONFDIR/private/key\&.pem\fR
@@ -78,16 +78,16 @@ allowed)
 ACME account private key
 .RE
 .PP
-\fICONFDIR/private/DOMAIN/key\&.pem\fR
+\fICONFDIR/private/IDENTIFIER/key\&.pem\fR
 .RS 4
 certificate key for
-\fIDOMAIN\fR
+\fIIDENTIFIER\fR
 .RE
 .PP
-\fICONFDIR/DOMAIN/cert\&.pem\fR
+\fICONFDIR/IDENTIFIER/cert\&.pem\fR
 .RS 4
 certificate for
-\fIDOMAIN\fR
+\fIIDENTIFIER\fR
 .RE
 .RE
 .PP
@@ -95,7 +95,8 @@ certificate for
 .RS 4
 Do not reissue certificates that are still valid for longer than
 \fIDAYS\fR
-(default 30)\&.
+(default 30)\&. See also
+\fB\-o, \-\-no\-ocsp\fR\&.
 .RE
 .PP
 \fB\-f, \-\-force\fR
@@ -107,7 +108,7 @@ Force certificate reissuance regardless of expiration date\&.
 .RS 4
 Challenge hook program\&. If not specified
 \fBuacme\fR
-interacts with the user for every ACME challenge, printing information about the challenge type, token and authorization on stderr\&. If specified,
+interacts with the user for every ACME challenge, printing information about the challenge type, token and authorization on stderr\&. If specified
 \fBuacme\fR
 executes
 \fIPROGRAM\fR
@@ -180,9 +181,22 @@ Request certificates with the RFC7633 Certificate Status Request TLS Feature Ext
 .RS 4
 By default
 \fBuacme\fR
-creates directories/keys if they do not exist\&. When this option is specified,
+creates directories/keys if they do not exist\&. When this option is specified
 \fBuacme\fR
 never does so and instead exits with an error if anything required is missing\&.
+.RE
+.PP
+\fB\-o, \-\-no\-ocsp\fR
+.RS 4
+When this flag is
+\fBnot\fR
+specified and the certificate has an Authority Information Access extension with an OCSP server location according to
+https://tools\&.ietf\&.org/html/rfc5280#section\-4\&.2\&.2\&.1
+\fBuacme\fR
+makes an OCSP request to the server; if the certificate is reported as revoked
+\fBuacme\fR
+forces reissuance regardless of the expiration date\&. See also
+\fB\-d, \-\-days\fR\&.
 .RE
 .PP
 \fB\-s, \-\-staging\fR
@@ -244,7 +258,7 @@ Update the
 \fIEMAIL\fR
 associated with the ACME account corresponding to the account private key\&. If
 \fIEMAIL\fR
-is not specified, the account contact email will be dropped\&.
+is not specified the account contact email is removed\&.
 .RE
 .PP
 \fBuacme\fR [\fIOPTIONS\fR \&...] \fBdeactivate\fR
@@ -268,26 +282,36 @@ to
 \fICONFDIR/private/key\&.pem\fR\&.
 .RE
 .PP
-\fBuacme\fR [\fIOPTIONS\fR \&...] \fBissue\fR \fIDOMAIN\fR [\fIALTNAME\fR \&...]
+\fBuacme\fR [\fIOPTIONS\fR \&...] \fBissue\fR \fIIDENTIFIER\fR [\fIALTNAME\fR \&...]
 .RS 4
 Issue a certificate for
-\fIDOMAIN\fR
+\fIIDENTIFIER\fR
 with zero or more
 \fIALTNAMEs\fR\&. If a certificate is already available at
-\fICONFDIR/DOMAIN/cert\&.pem\fR
+\fICONFDIR/IDENTIFIER/cert\&.pem\fR
 for the specified
-\fIDOMAIN\fR
+\fIIDENTIFIER\fR
 and
-\fIALTNAMEs\fR, and is still valid for longer than
-\fIDAYS\fR, no action is taken unless
+\fIALTNAMEs\fR
+and is still valid for longer than
+\fIDAYS\fR
+no action is taken unless
 \fB\-f, \-\-force\fR
-is specified\&. The new certificate is saved to
-\fICONFDIR/DOMAIN/cert\&.pem\fR\&. If the certificate file already exists, it is hardlinked to
-\fICONFDIR/DOMAIN/cert\-TIMESTAMP\&.pem\fR
+is specified or
+\fB\-o, \-\-no\-ocsp\fR
+is
+\fBnot\fR
+specified and the certificate is reported as revoked by the OCSP server\&. The new certificate is saved to
+\fICONFDIR/IDENTIFIER/cert\&.pem\fR\&. If the certificate file already exists it is hardlinked to
+\fICONFDIR/IDENTIFIER/cert\-TIMESTAMP\&.pem\fR
 before overwriting\&. The private key for the certificate is loaded from
-\fICONFDIR/private/DOMAIN/key\&.pem\fR\&. If no such file exists, a new key is generated unless
+\fICONFDIR/private/IDENTIFIER/key\&.pem\fR\&. If no such file exists, a new key is generated unless
 \fB\-n, \-\-never\-create\fR
-is specified\&.
+is specified\&. Wildcard IDENTIFIERs or ALTNAMEs are dealt with correctly, as long as the ACME server supports them; note that any such wildcards are automatically removed from the configuration subdirectory name: for example a certificate for
+\fI*\&.test\&.com\fR
+is saved to
+\fICONFDIR/test\&.com/cert\&.pem\fR\&. IP address IDENTIFIERs and ALTNAMEs are also supported according to
+https://tools\&.ietf\&.org/html/rfc8738#section\-3
 .RE
 .PP
 \fBuacme\fR [\fIOPTIONS\fR \&...] \fBrevoke\fR \fICERTFILE\fR
@@ -337,7 +361,7 @@ E_BADARGS=85
 .nf
 if test $# \-ne "$ARGS"
 then
-    echo "Usage: `basename $0` method type ident token auth" 1>&2
+    echo "Usage: $(basename "$0") method type ident token auth" 1>&2
     exit $E_BADARGS
 fi
 .fi
@@ -367,7 +391,7 @@ case "$METHOD" in
     "begin")
         case "$TYPE" in
             http\-01)
-                echo \-n "${AUTH}" > ${CHALLENGE_PATH}/${TOKEN}
+                echo \-n "${AUTH}" > "${CHALLENGE_PATH}/${TOKEN}"
                 exit $?
                 ;;
             *)
@@ -378,14 +402,13 @@ case "$METHOD" in
     "done"|"failed")
         case "$TYPE" in
             http\-01)
-                rm ${CHALLENGE_PATH}/${TOKEN}
+                rm "${CHALLENGE_PATH}/${TOKEN}"
                 exit $?
                 ;;
             *)
                 exit 1
                 ;;
         esac
-        exit 0
         ;;
     *)
         echo "$0: invalid method" 1>&2
@@ -398,12 +421,15 @@ esac
 .SH "BUGS"
 .sp
 If you believe you have found a bug, please create a new issue at https://github\&.com/ndilieto/uacme/issues with any applicable information\&.
+.SH "SEE ALSO"
+.sp
+\fBualpn\fR(1)
 .SH "AUTHOR"
 .sp
 \fBuacme\fR was written by Nicola Di Lieto
 .SH "COPYRIGHT"
 .sp
-Copyright \(co 2019 Nicola Di Lieto <nicola\&.dilieto@gmail\&.com>
+Copyright \(co 2019,2020 Nicola Di Lieto <nicola\&.dilieto@gmail\&.com>
 .sp
 This file is part of \fBuacme\fR\&.
 .sp
